fixed difficulty level dropdown spacing

--- a/main.css
+++ b/main.css
@@ -19,8 +19,11 @@ body {
 .bootstrap {
     background-color : #333;
     margin-top: 2em;
-
-
+    margin-bottom: 5px;
+    /* display: flex; */
+}
+.dropdown {
+    margin-top: 10px;
 }
 .center {
     position: absolute;
